Footer was covering up tabbed sidebar, had to make changes in stylesheet to fix this.

--- a/includes/plugin/layouts/ecomma_45_10_45.css
+++ b/includes/plugin/layouts/ecomma_45_10_45.css
@@ -38,7 +38,7 @@
 }
 
 div.panel-panel.unit.panel-footer.lastUnit{
-  position:relative;
+  position:absolute;
   width:80%;
   bottom: 0px;
 }
